fix: More issues